--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div>
         <div id="chat-history">
             <a class="logo-wrapper">
-                <img src="/static/images/Logo.png" alt="">
+                <img src="static/images/logo.png" alt="">
             </a>
             <div class="heading-wrapper">
                 <svg stroke="currentColor" fill="var(--answerColor)" stroke-width="0" viewBox="0 0 30 30" focusable="false" class="chakra-icon css-18176s2" height="1.5em" width="1.5em" xmlns="http://www.w3.org/2000/svg"><path fill="none" d="M0 0h24v24H0z"></path><path d="M19 9l1.25-2.75L23 5l-2.75-1.25L19 1l-1.25 2.75L15 5l2.75 1.25L19 9zm-7.5.5L9 4 6.5 9.5 1 12l5.5 2.5L9 20l2.5-5.5L17 12l-5.5-2.5zM19 15l-1.25 2.75L15 19l2.75 1.25L19 23l1.25-2.75L23 19l-2.75-1.25L19 15z"></path></svg>
