--- a/index.html
+++ b/index.html
@@ -307,33 +307,59 @@
                       <i class="fa-regular fa-gem"></i>
                     </div>
                     <select name="" id="">
-                        <option value="">translate</option>
-                        <option value="">Auto enrich full text</option>
+                      <option value="">translate</option>
+                      <option value="">Auto enrich full text</option>
                     </select>
                   </div>
                 </div>
 
-                <!-- <div id="chat-list">
-                  <p class="keys">what this document is about?</p>
-                  <p
+                <div id="chat-list">
+                  <div class="keys">
+                    <div class="img-wrapper">
+                      <img src="./static/images/profile.jpg" alt="" />
+                    </div>
+                    <div class="content-wrapper">
+                      <p>what this document is about?</p>
+                    </div>
+                  </div>
+
+                  <div
                     class="values"
                     id="885FC49FA"
                     onclick='copyToClipboard("885FC49FA")'
                   >
-                    The document is titled "What is Artificial Intelligence?"
-                    and it provides information about the concept of artificial
-                    intelligence.
-                  </p>
-                  <p class="keys">
-                    What is the relationship between artificial intelligence and
-                    the concept of information flow in systems?
-                  </p>
-                  <p
+                    <div class="img-wrapper">
+                      <img src="./static/icons/chat-gpt.svg" alt="" />
+                    </div>
+                    <div class="content-wrapper">
+                      <p>
+                        The document is titled "What is Artificial
+                        Intelligence?" and it provides information about the
+                        concept of artificial intelligence.
+                      </p>
+                    </div>
+                  </div>
+                  
+                  <div class="keys">
+                    <div class="img-wrapper">
+                      <img src="./static/images/profile.jpg" alt="" />
+                    </div>
+                    <div class="content-wrapper">
+                      <p>What is the relationship between artificial intelligence and
+                        the concept of information flow in systems?</p>
+                    </div>
+                  </div>
+                  <div
                     class="values"
-                    id="B25AF3CB7"
-                    onclick='copyToClipboard("B25AF3CB7")'
+                    id="885FC49FA"
+                    onclick='copyToClipboard("885FC49FA")'
                   >
-                    The relationship between artificial intelligence and the
+                    <div class="img-wrapper">
+                      <img src="./static/icons/chat-gpt.svg" alt="" />
+                    </div>
+                    <div class="content-wrapper">
+                      <p>
+                        The relationship between artificial intelligence and the
                     concept of information flow in systems is discussed on the
                     following pages in the PDF document:<br />
                     <br />1. Page 8: The illustration on this page shows a
@@ -347,8 +373,10 @@
                     be conveyed in a selected representation language. The
                     receiver must have the ability to interpret the information
                     correctly according to the intended meaning or semantics.
-                  </p>
-                </div> -->
+                      </p>
+                    </div>
+                  </div>
+                </div>
               </div>
               <div id="chat-form" style="display: block">
                 <div class="form-inner-wrapper">
