--- a/index.html
+++ b/index.html
@@ -875,7 +875,8 @@
       }
 
       $("document").ready(function () {
-        $("#toolbar").css("display", "none");
+        let vh = window.innerHeight * 0.01;
+        $(":root").css("--vh", `${vh}px`);
       });
 
       // small functions for page
@@ -918,13 +919,6 @@
         $(".empty-bg-wrapper").removeClass("show");
       });
 
-      let vh = window.innerHeight * 0.01;
-      document.documentElement.style.setProperty("--vh", `${vh}px`);
-
-      window.addEventListener("resize", () => {
-        let vh = window.innerHeight * 0.01;
-        document.documentElement.style.setProperty("--vh", `${vh}px`);
-      });
     </script>
   </body>
 </html>
