--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>File Upload with XMLHttpRequest</title>
-    <link rel="stylesheet" href="/static/bootstrap.min.css" />
-    <link rel="stylesheet" href="/static/style.css" />
-    <link rel="stylesheet" href="/static/all.min.css" />
+    <link rel="stylesheet" href="static/bootstrap.min.css" />
+    <link rel="stylesheet" href="static/style.css" />
+    <link rel="stylesheet" href="static/all.min.css" />
 
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <script src="/static/app.js"></script>
@@ -22,7 +22,7 @@
             <div class="icon-wrapper">
               <img src="static/images/Logo.svg" alt="" />
             </div>
-            <span>TAAM.Ai</span>
+            <span>Logo</span>
           </a>
           <div id="chat-history">
             <ul class="tabs-wrapper">
